@@ -103,7 +103,9 @@
             for conversions.
             </para>
         </remarks>
-        <exception cref="T:System.ArgumentNullException">To be added; from: <see cref="M:Mono.Rocks.Either`2.A(`0)" /></exception>
+        <exception cref="T:System.ArgumentNullException">
+          <paramref name="value" /> is <see langword="null" />.
+            </exception>
       </Docs>
     </Member>
     <Member MemberName="B">
@@ -143,7 +145,9 @@
             for conversions.
             </para>
         </remarks>
-        <exception cref="T:System.ArgumentNullException">To be added; from: <see cref="M:Mono.Rocks.Either`2.B(`1)" /></exception>
+        <exception cref="T:System.ArgumentNullException">
+          <paramref name="value" /> is <see langword="null" />.
+            </exception>
       </Docs>
     </Member>
     <Member MemberName="Equals">
@@ -278,6 +282,17 @@
             <typeparamref name="TResult" />.
             </para>
         </remarks>
+        <exception cref="T:System.ArgumentNullException">
+          <para>
+            <paramref name="a" /> is <see langword="null" />.
+            </para>
+          <para>
+            -or-
+            </para>
+          <para>
+            <paramref name="b" /> is <see langword="null" />.
+            </para>
+        </exception>
       </Docs>
     </Member>
     <Member MemberName="GetHashCode">
