@@ -1,3 +1,8 @@
+2009-03-20  Jonathan Pryor  <jpryor@novell.com>
+
+	* mkeithers: Generate <exception/> XML comments.
+	* doc/en/Mono.Rocks/Either*.xml: Flush <exception/> comments.
+
 2009-03-14  Jonathan Pryor  <jpryor@novell.com>
 
 	* doc/**: Flush (add <exception/> specifications, as generated by
